--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 
+    //places
+//    implementation 'com.google.android.libraries.places:places:2.3.0'
+
 
 }
